--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.js",
+    "start": "node ./app.js"
   },
   "dependencies": {
+    "@vue/compiler-dom": "^3.1.4",
+    "@vue/compiler-sfc": "^3.0.5",
     "debug": "^4.1.1",
     "ejs": "~2.3.3",
     "koa": "^2.7.0",
@@ -16,7 +18,8 @@
     "koa-onerror": "^4.1.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.2.0"
+    "koa-views": "^6.2.0",
+    "vue": "^3.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
